c4prj2_input/grade.txt
Grading at Fri Aug  2 13:13:31 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:36:9: error: format ‘%p’ expects argument of type ‘void *’, but argument 2 has type ‘card_t * {aka struct card_tag *}’ [-Werror=format=]
  printf("unkonwn card here %p\n",dummy_card);
         ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
